# Projekt

./: .gitignore  CMakeLists.txt  COPYRIGHT.md  README.md  WindowsInstaller.nsi  main.cpp  uml.txt
Doctest_tests/: BallTest.cpp  BatTest.cpp  BoardTest.cpp  BobTest.cpp  CMakeLists.txt  CoinTest.cpp  DirectionTest.cpp  ThingTest.cpp  WordsTest.cpp
helpers/: Basic.cpp  Basic.hpp  CMakeLists.txt  Direction.cpp  Direction.hpp  Games.hpp  Orientation.hpp  WindowSize.cpp  WindowSize.hpp  Words.cpp  Words.hpp
pages/: BasicPage.cpp  BasicPage.hpp  CMakeLists.txt  ConnectFour.cpp  ConnectFour.hpp  Engine.cpp  Engine.hpp  GamePage.cpp  GamePage.hpp  Info.cpp  Info.hpp  MainMenu.cpp  MainMenu.hpp  Pong.cpp  Pong.hpp  Reaction.cpp  Reaction.hpp
shapes/: Ball.cpp  Ball.hpp  BallBat.cpp  BallBat.hpp  Bat.cpp  Bat.hpp  Board.cpp  Board.hpp  Bob.cpp  Bob.hpp  CMakeLists.txt  Coin.cpp  Coin.hpp  Thing.cpp  Thing.hpp
